--- a/roles/configcopy/files/alertmanager.yml
+++ b/roles/configcopy/files/alertmanager.yml
@@ -9,12 +9,12 @@ route:
 receivers:
   - name: email-notifications
     email_configs:
-      - to: badrivarun09@gmail.com
+      - to: <Add-sender-gmail> #for example:- to: username@gmail.com
         from: test@example.com
         smarthost: smtp.gmail.com:587
-        auth_username: badrivarun09@gmail.com
-        auth_identity: badrivarun09@gmail.com
-        auth_password: xuwy plmh xdqv kirr
+        auth_username: <Add-gmail> #for example:- to: username@gmail.com
+        auth_identity: <Add-gmail> #for example:- to: username@gmail.com
+        auth_password: <Add-App_password> # for example: xuwy plmh xdqv kirr
         send_resolved: true
 inhibit_rules:
   - source_match:
